# game_of_life

./: .gitignore  GoL-Simulator.cpp  GoL-Simulator.hpp  GridColorTexturer.cpp  GridColorTexturer.hpp  ReadMe.md  main.cpp  meson.build
